# CMakeFormat

./: CMakeLists.txt
cmake/: CMakeFormatConfig.cmake.in  External_CMakeAST.cmake  External_polymorphic_value.cmake  Superbuild.cmake
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
